--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <h1>Mehmet Salih Eroğlu</h1>
 <h2>Hakkımda</h2>
-<h3>Yazılım ile uğraşmaktan hoşlanırım.</h3>
+<p>Yazılım ile uğraşmaktan hoşlanırım...</p>
+<p>anlatacaklarım bu kadar.</p>
 <!-- açıklama satırı deneme 1-2 -->
